@@ -42,15 +42,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArgs>
-                        <!-- 通知 JDK 使编译后 class 文件携带参数名称 -->
-                        <arg>-parameters</arg>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                    <!-- 编码 -->
-                    <encoding>${scx.encoding}</encoding>
-                    <!-- 指定编译时的 JDK 版本 -->
-                    <release>${_java.version}</release>
+                    <enablePreview>true<enablePreview>
                 </configuration>
             </plugin>
 
@@ -66,7 +58,7 @@
     </build>
 
     <properties>
-        <_java.version>19</_java.version>
+        <scx.javaVersion>19</scx.javaVersion>
     </properties>
 
 </project>
